--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#about">about</a></li>
                     <li><a href="#experience">experiences</a></li>
                     <li><a href="#projects">projects</a></li>
+                    <li><a href="#projects">Resume</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
             </div>
