--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
                 <h1 class="wow animated fadeInUp">Projects</h1>
                 <h3 class="wow animated fadeInUp">Main Projects</h3>
                 <div class="wow animated fadeInUp">
-                    <a href="https://samarhannachi.shinyapps.io/Weddings-Divorces/"
+                    <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
                     target="_blank"><img src="p1.jpg" alt=""></a>
                     
-                    <a href="#"><img src="p2.jpeg" alt=""></a>
+                    <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
+                       target="_blank"><img src="p2.jpeg" alt=""></a>
                     <a href="#"><img src="p2.jpeg" alt=""></a>
                     <a href="#"><img src="p2.jpeg" alt=""></a>
                     <a href="#"><img src="p2.jpeg" alt=""></a>
