--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
                     target="_blank"><img src="p1.jpg" alt=""></a>
                     
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
-                       target="_blank"><img src="p2.jpeg" alt=""></a>
-                    <a href="#"><img src="p2.jpeg" alt=""></a>
-                    <a href="#"><img src="p2.jpeg" alt=""></a>
-                    <a href="#"><img src="p2.jpeg" alt=""></a>
+                       target="_blank"><img src="FOOD AND FEED.jpeg" alt=""></a>
+                    <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" target="_blank"><img src="TunFlag.jpeg" alt=""></a>
+                    <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank"><img src="p2.jpeg" alt=""></a>
+                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank"><img src="bayes .jpg" alt=""></a>
+
                 </div>
                 <br><br><br>
                 <a href="#" class="wow button animated fadeIn">More Projects</a>
