--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="about">
             <div class="text-about">
                 <h1 class="wow animated fadeInUp">About Me</h1>
-                <p class="wow animated fadeInUp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur culpa sint, sed a necessitatibus aliquid officia id recusandae sapiente, nostrum, eum cum? Voluptatum asperiores debitis dolores deserunt quam quisquam animi tenetur quibusdam minima eligendi, reprehenderit iste similique at assumenda porro doloremque atque accusamus quas libero. </p>
+                <p class="wow animated fadeInUp">I am a lifelong learner seeking for knowledge in every book. I don't make distinction between fields between I firmly believe that everything is interconnected. And to make something astonishing you need a combination of different ingredients. I am curious and ambitious and right now digging deep into open-source data.</p>
             </div>
         </section>
         
