--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="about">
             <div class="text-about">
                 <h1 class="wow animated fadeInUp">About Me</h1>
-                <p class="wow animated fadeInUp">I am a lifelong learner seeking for knowledge in every book. I don't make distinction between fields because I firmly believe that everything is interconnected. And to make something astonishing you need a combination of different ingredients.</br> I am curious and ambitious and right now digging deep into the open-source data.
+                <p class="wow animated fadeInUp">I am a lifelong learner seeking for knowledge in every book. I don't make distinction between fields because I firmly believe that everything is interconnected.</br> I am curious and ambitious and right now digging deep into the open-source data.
           </br></br>  Enjoy your visit !
           </p>
             </div>
@@ -95,7 +95,7 @@
                     <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank"><img src="bayes .jpg" alt=""></a>
 
                 </div>
-                <br><br><br><br><br><br>
+                <br><br><br>
                 <a href="#" class="wow button animated fadeIn">More Projects</a>
             </div>
         </section>
