--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="text-about">
                 <h1 class="wow animated fadeInUp">About Me</h1>
                 <p class="wow animated fadeInUp">I am a lifelong learner seeking for knowledge in every book. I don't make distinction between fields because I firmly believe that everything is interconnected.</br> I am curious and ambitious and right now digging deep into the open-source data.
-          </br></br>  Enjoy your visit !
+          </br>  Enjoy your visit !
           </p>
             </div>
         </section>
