--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 </div>
                 <br><br><br>
-                <a href="#" class="wow button animated fadeIn">More Projects</a>
+                <a href="https://github.com/Samar-Hannachi?tab=repositories" class="wow button animated fadeIn">More Projects</a>
             </div>
         </section>
         
