--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="FOOD AND FEED.jpeg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" target="_blank"><img src="TunFlag.jpeg" alt=""></a> 
-                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank"><img src="bayes .jpeg" alt=""></a>
-                </div>
+                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank"><img src="bayes.jpg" alt=""></a>
+                    <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank"><img src="bayes .jpg" alt=""></a>
+
+              </div>
                 
-                <a href="https://github.com/Samar-Hannachi?tab=repositories" class="wow button animated fadeIn">More Projects</a>
+                <a href="https://github.com/Samar-Hannachi?tab=repositories" target="_blank" class="wow button animated fadeIn">More Projects</a>
             </div>
         </section>
         
