--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="about">
             <div class="text-about">
                 <h1 class="wow animated fadeInUp">About Me</h1>
-                <p class="wow animated fadeInUp">I am a lifelong learner seeking for knowledge in every book. I don't make distinction between fields because I firmly believe that everything is interconnected.</br> I am curious and ambitious and right now digging deep into the open-source data.
+                <p class="wow animated fadeInUp"></br> I am curious and ambitious and right now digging deep into the open-source data.
           </br>  Enjoy your visit !
           </p>
             </div>
