--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="about">
             <div class="text-about">
                 <h1 class="wow animated fadeInUp">About Me</h1>
-                <p class="wow animated fadeInUp"></br> I am curious and ambitious and right now digging deep into the open-source data.
+                <p class="wow animated fadeInUp">I am a lifelong learner seeking for knowledge in every book. I don't make distinction between fields because I firmly believe that everything is interconnected.</br> I am curious and ambitious and right now digging deep into the open-source data.
           </br>  Enjoy your visit !
           </p>
             </div>
@@ -90,9 +90,12 @@
                     
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="FOOD AND FEED.jpeg" alt=""></a>
-                    <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" target="_blank"><img src="TunFlag.jpeg" alt=""></a> 
-                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank"><img src="bayes.jpg" alt=""></a>
-                    <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank"><img src="bayes .jpg" alt=""></a>
+                    <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
+                       target="_blank"><img src="TunFlag.jpeg" alt=""></a> 
+                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank">
+                      <img src="bayes.jpg" alt=""></a>
+                    <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank">
+                      <img src="bayes .jpg" alt=""></a>
 
               </div>
                 
