--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         
         <!-- Contact Section -->
         
-        <section id="contact">https://github.com/Samar-Hannachi?tab=repositories
+        <section id="contact">
             <div class="text-contact">
                <h1 class="wow animated fadeInUp">Contact Me</h1>
                 <form action="" id="form" class="wow animated fadeInUp">
