--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
                     <div class="wow grid animated fadeInUp">   
                         <div>
                             <h3>CVM Intern</h3>
+                          <a href="https://github.com/Samar-Hannachi/CVM-Internship/blob/master/Poster.pdf"  target="_blank" alt=""></a>
                             <img src="ps.jpeg" alt=""><p>Orange Tunisia</p>
                         </div>
                       
                         <div>
                             <h3>Research Intern</h3>
-                            <img src="sonyvegas.png" alt=""><p>Pasteur Institute of Tunis</p>
+                  <a href="https://github.com/Samar-Hannachi/Research-Internship/blob/master/Rapport.pdf"  
+                     target="_blank" alt=""></a>
+               <img src="sonyvegas.png" alt=""><p>Pasteur Institute of Tunis</p>
                         </div>
                        
                     </div>
