--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <title>Samar Hannachi</title>
+  <a href=""><img src="githug.svg" alt=""></a>
+
 </head>
 <body>
    <!-- Navigation Bar -->
