--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     target="_blank"><img src="p1.jpg" alt=""></a>
                     
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
-                       target="_blank"><img src="FOOD AND FEED.jpeg" alt=""></a>
+                       target="_blank"><img src="images.jpeg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
                        target="_blank"><img src="TunFlag.jpeg" alt=""></a> 
                     <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank">
