--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h3 class="wow animated fadeInUp">Main Projects</h3>
                 <div class="wow animated fadeInUp">
                     <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
-                    target="_blank"><img src="p1.jpg" alt=""></a>
+                    target="_blank"><img src="wd.jpg" alt=""></a>
                     
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
