--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                         <div>
                             <h3>CVM Intern</h3>
                           <a href="https://github.com/Samar-Hannachi/CVM-Internship/blob/master/Poster.pdf"  target="_blank" alt=""></a>
-                            <imga src="ps.jpeg" alt=""><p>Orange Tunisia</p>
+                            <img src="ps.jpeg" alt=""><p>Orange Tunisia</p>
                         </div>
                       
                         <div>
                             <h3>Research Intern</h3>
                   <a href="https://github.com/Samar-Hannachi/Research-Internship/blob/master/Rapport.pdf"  
                      target="_blank" alt=""></a>
-               <imga src="sonyvegas.png" alt=""><p>Pasteur Institute of Tunis</p>
+               <img src="sonyvegas.png" alt=""><p>Pasteur Institute of Tunis</p>
                         </div>
                        
                     </div>
