--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <!-- or -->
-  <link rel="nofollow"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link  rel="icon" href="/favicon.ico" type="image/x-icon"
+>
   <title>Samar Hannachi</title>
 
 
