--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <!-- or -->
-  <link  rel="icon" href="/favicon.ico" type="image/x-icon"
->
+  <link rel="icon" href="http://example.com/favicon.png">
   <title>Samar Hannachi</title>
 
 
