--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <!-- or -->
-  <link rel="icon" href="http://example.com/favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>Samar Hannachi</title>
 
 
