--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <!-- or -->
-  <link rel="shortcut icon" href="android-icon-192x192.png">
+  <link rel="shortcut icon" href="knowledge.jpg">
   <title>Samar Hannachi</title>
 
 
