--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
                     <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank">
                       <img src="bayes .jpg" alt=""></a>
                    <a href="" target="_blank">
-                      <img src="bayes.jpg" alt=""></a>
+                      <img src="og.jpg" alt=""></a>
                     <a href="" target="_blank">
-                      <img src="bayes .jpg" alt=""></a>
+                      <img src="og .jpg" alt=""></a>
+                   <a href="" target="_blank">
+                      <img src="og .jpg" alt=""></a>
 
               </div>
                 
