--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
-                       target="_blank"><img src="flag.png" alt=""></a> 
+                       target="_blank"><img src="tun.jpeg" alt=""></a> 
                     <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank">
                       <img src="bayes.jpg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank">
