--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="wow animated fadeInUp">
                     <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
                     target="_blank"><img src="wd.jpg" alt="">
-                  <p class="img__description">This image looks super neat.</p></a>
+                  <p class="img__description">lala</p></a>
                     
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
