--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                
                 <div class="wow animated fadeInUp">
                     <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
-                    target="_blank"><img src="wd.jpg" alt="">
-                  <p class="img__description">lala</p></a>
+                    target="_blank"><img src="wd.jpg" alt="" title="bu">
+                  </a>
                     
                     <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
