--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
                
                 <div class="wow animated fadeInUp">
                     <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
-                    target="_blank"><img src="wd.jpg" alt="" title="bu">
-                  </a>
-                    
-                    <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
+                    target="_blank"><img src="wd.jpg" alt="" title="bu"></a>
+                      <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
                        target="_blank"><img src="tun.jpeg" alt=""></a> 
