--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="wow animated fadeInUp">
                     <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
                     target="_blank"><img src="wd.jpg" alt="" title="bu">
-                      <div class="hvrbox-layer_top"><div class="hvrbox-text">Lorem</div></div></a>
+                      <p class="text">text</p></a>
                   <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
