--- a/index.html
+++ b/index.html
@@ -110,9 +110,13 @@
                <h3 class="wow animated fadeInUp">Main Projects</h3>
                
                 <div class="wow animated fadeInUp">
-                    <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/"
-                    target="_blank"><img src="wd.jpg" alt="" title="bu">
-                      <p class="text">text</p></a>
+<div class="hvrbox">
+   <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/" target="_blank"><img src="wd.jpg" alt="Mountains" class="hvrbox-layer_bottom"></a>
+<div class="hvrbox-layer_top hvrbox-layer_slideup">
+		<div class="hvrbox-text">Lorem .</div>
+	</div>
+</div>
+                   
                   <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
                        target="_blank"><img src="images.jpeg" alt=""></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
