--- a/index.html
+++ b/index.html
@@ -110,20 +110,15 @@
                <h3 class="wow animated fadeInUp">Main Projects</h3>
                
                 <div class="wow animated fadeInUp">
-<div class="hvrbox">
-   <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/" target="_blank"><img src="wd.jpg" alt="Mountains" class="hvrbox-layer_bottom"></a>
-<div class="hvrbox-layer_top hvrbox-layer_slideup">
-		<div class="hvrbox-text">Lorem .</div>
-	</div>
-</div>
-                   
-                  <a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
-                       target="_blank"><img src="images.jpeg" alt=""></a>
+
+   <a href="https://samarhannachi.shinyapps.io/WeddingsDivorces/" target="_blank"><img src="wd.jpg" alt="" title="Shiny Dashboard"></a>
+<a href="https://samarhannachi.shinyapps.io/FoodvsFeed/"
+                       target="_blank"><img src="images.jpeg" alt=""  title="flexdashboard"></a>
                     <a href="https://www.kaggle.com/samar555/tunisian-database-visualizations-using-python" 
-                       target="_blank"><img src="tun.jpeg" alt=""></a> 
-                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank">
+                       target="_blank"><img src="tun.jpeg" alt=""  title="Python Kernel"></a> 
+                    <a href="https://www.kaggle.com/samar555/bayesian-models-comparison" target="_blank"  title="RMarkdown Kernel">
                       <img src="bayes.jpg" alt=""></a>
-                    <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank">
+                    <a href="https://www.kaggle.com/samar555/bayesian-change-point-detection-on-polio-case" target="_blank" title="RMarkdown Kernel">
                       <img src="bayes .jpg" alt=""></a>
                    <a href= "" >
                       <img src="og.jpg" alt=""></a>
